--- a/examples/compute/sharedvpchostproject.yaml
+++ b/examples/compute/sharedvpchostproject.yaml
@@ -3,11 +3,41 @@ kind: SharedVPCHostProject
 metadata:
   annotations:
     meta.upbound.io/example-id: compute/v1beta1/sharedvpchostproject
-    upjet.upbound.io/manual-intervention: "Required organizational level permissions"
   labels:
-    testing.upbound.io/example-name: shared-vpc-host-project
-  name: shared-vpc-host-project
+    testing.upbound.io/example-name: host
+  name: host
 spec:
   forProvider:
     project: host-project-id
 
+---
+
+apiVersion: compute.gcp.upbound.io/v1beta1
+kind: SharedVPCServiceProject
+metadata:
+  annotations:
+    meta.upbound.io/example-id: compute/v1beta1/sharedvpchostproject
+  labels:
+    testing.upbound.io/example-name: service1
+  name: service1
+spec:
+  forProvider:
+    hostProject: host-project-id
+    serviceProject: service-project-id-1
+
+---
+
+apiVersion: compute.gcp.upbound.io/v1beta1
+kind: SharedVPCServiceProject
+metadata:
+  annotations:
+    meta.upbound.io/example-id: compute/v1beta1/sharedvpchostproject
+  labels:
+    testing.upbound.io/example-name: service2
+  name: service2
+spec:
+  forProvider:
+    hostProject: host-project-id
+    serviceProject: service-project-id-2
+
+---
