--- a/examples/storage/objectaccesscontrol.yaml
+++ b/examples/storage/objectaccesscontrol.yaml
@@ -3,7 +3,7 @@ kind: ObjectAccessControl
 metadata:
   annotations:
     meta.upbound.io/example-id: storage/v1beta1/objectaccesscontrol
-    upjet.upbound.io/manual-ntervention: "Needs permissions for provide access to ACL"
+    upjet.upbound.io/manual-intervention: "Needs permissions for provide access to ACL"
   labels:
     testing.upbound.io/example-name: public-rule
   name: public-rule
