--- a/examples/storage/notification.yaml
+++ b/examples/storage/notification.yaml
@@ -36,24 +36,6 @@ spec:
 
 ---
 
-apiVersion: pubsub.gcp.upbound.io/v1beta1
-kind: TopicIAMMember
-metadata:
-  annotations:
-    meta.upbound.io/example-id: pubsub/v1beta1/topiciamgcsmember
-  labels:
-    testing.upbound.io/example-name: topic-iam-gcs-member
-  name: topic-iam-gcs-member
-spec:
-  forProvider:
-    member: "serviceAccount:service-${data.cloudplatform_project.projectNumber}@gs-project-accounts.iam.gserviceaccount.com"
-    role: "roles/pubsub.publisher"
-    topicSelector:
-      matchLabels:
-        testing.upbound.io/example-name: topic
-
----
-
 apiVersion: storage.gcp.upbound.io/v1beta1
 kind: Bucket
 metadata:
@@ -61,7 +43,7 @@ metadata:
     meta.upbound.io/example-id: storage/v1beta1/notification
   labels:
     testing.upbound.io/example-name: bucket
-  name: bucket
+  name: bucket-${Rand.RFC1123Subdomain}
 spec:
   forProvider:
     location: US
