--- a/examples/compute/sharedvpchostproject.yaml
+++ b/examples/compute/sharedvpchostproject.yaml
@@ -1,5 +1,4 @@
----
-piVersion: compute.gcp.upbound.io/v1beta1
+apiVersion: compute.gcp.upbound.io/v1beta1
 kind: SharedVPCHostProject
 metadata:
   annotations:
