--- a/examples/compute/sharedvpcserviceproject.yaml
+++ b/examples/compute/sharedvpcserviceproject.yaml
@@ -3,6 +3,7 @@ kind: SharedVPCServiceProject
 metadata:
   annotations:
     meta.upbound.io/example-id: compute/v1beta1/sharedvpcserviceproject
+    upjet.upbound.io/manual-intervention: "Only supports this permission at project or organizational level currently"
   labels:
     testing.upbound.io/example-name: service1
   name: service1
